<resources>
    <string name="app_name">splash</string>
    <string name="e_faraidh">E-Faraidh</string>
    <string name="versi_2_0">versi 2.0</string>
    <string name="pusing_meng">Pusing mengatur\npembagian warisan?</string>
    <string name="lewati"><a href="">Lewati</a></string>
    <string name="materipendahuluan1">
        Segala puji hanya bagi Allah, shalawat dan salam atas rasulullah, keluarganya, para shahabatnya, dan yang mengikuti beliau (dengan baik). Adapun setelah itu, Allah Yang Maha Suci dan Maha Tinggi telah berfirman
    </string>
    <string name="materipendahuluan2">&quot;Mereka hendak memadamkan cahaya (agama) Allah dengan mulut (ucapan-ucapan) mereka, dan Allah tetap menyempurnakan cahaya-Nya meskipun orang-orang kafir benci&quot;. (Ash-Shaf: 8)</string>
    <string name="materipendahuluan3">Orang-orang non Islam selalu berupaya memadamkan cahaya Islam dengan lisan-lisan mereka. Dengan lisan, mereka melontarkan kalimat-kalimat yang rancu (syubhat) dan kekufuran baik melalui media elektronik maupun cetak seperti televisi, radio dan surat kabar atau majalah, maupun sarana-sarana pendidikan sekuler. Sehingga kalimat-kalimat itu menjadikan kaum muslimin berprasangka buruk terhadap syariatnya dan merasa berat untuk mempelajarinya terlebih lagi mau menjalankan perintah-perintahnya kecuali orang yang dijaga oleh Allah dari makar dan tipu daya mereka.</string>
    <string name="assalamualaikum">Assalamualaikum</string>
    <string name="materi1"> <b>Apa itu Ilmu Faraidh?</b> \nUstadz Ilham Muhammad</string>
    <string name="materi2">Mengetahui pembagian harta warisan baik dalam (fikih) dan perhitungannya.</string>
    <string name="materi3">Memberikan harta peninggalan kepada setiap ahli waris yang berhak mendapatkannya. Dari sini kita tahu tentang pentingnya ilmu ini dan hukumnya.</string>
    <string name="materi4">Fardhu kifayah, jika ada seseorang (ahli ilmu faraidh) yang telah menegakkanya maka disunnahkan bagi lainnya.</string>
    <string name="materi5">Yang terkait peninggalan si mayit ada lima hak secara berurutan menurut kadar kepentingannya, yaitu sebagai berikut:</string>
    <string name="materi6">1. Beban persiapan pemakaman si mayit Seperti harga air untuk memandikannya, kafannya, upah bagi yang memandikanya penggali makamnya dan sejenis itu, karena semua perkara ini bagian dari kebutuhan si mayit , maka kedudukannya seperti makan, minum, pakaian dan tempat tinggal bagi orang yang pailit.</string>
    <string name="welcomepagekalkulator">Subjek dari perhitungan ini adalah sang pewaris, sehingga yang masuk dalam hitungan adalah yang berhubungan dengan pewaris (contoh: apabila yang mengisi adalah anak pewaris, maka istri dari sang pewaris adalah ibu anda / istri dari ayah anda) \n\n

Apabila yang berhubungan dengan pewaris telah meninggal atau hukum warisnya terputus atas satu atau lain hal, maka dianggap tidak ada (contoh: terputus hubungan pewaris dengan istrinya karena talak 3, maka istrinya tersebut dianggap tidak ada (0))</string>
</resources>
