<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FAFB">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/headermateri"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:id="@+id/header"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/kotakmateri"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/materi"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrowback"
                android:layout_marginTop="67dp"
                android:layout_marginLeft="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora"
                android:paddingLeft="60dp"
                android:paddingRight="211dp"
                android:text="Pendahuluan"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="70dp"
                android:id="@+id/text1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora"
                android:paddingLeft="37dp"
                android:paddingRight="36dp"
                android:text="@string/materipendahuluan1"
                android:textColor="#455468"
                android:textStyle="normal"
                android:textSize="14dp"
                android:layout_marginTop="50dp"
                android:layout_below="@id/text1"
                android:justificationMode="inter_word"
                android:id="@+id/text2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora"
                android:paddingLeft="37dp"
                android:paddingRight="36dp"
                android:text="@string/materipendahuluan2"
                android:textColor="#455468"
                android:textStyle="normal"
                android:textSize="14dp"
                android:layout_marginTop="45dp"
                android:layout_below="@id/text2"
                android:justificationMode="inter_word"
                android:id="@+id/text3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sora"
                android:paddingLeft="37dp"
                android:paddingRight="36dp"
                android:text="@string/materipendahuluan3"
                android:textColor="#455468"
                android:textStyle="normal"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/text3"
                android:justificationMode="inter_word"
                android:id="@+id/text4"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/imgarab"
                android:layout_below="@id/text2"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="8dp"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrownext"
                android:layout_below="@id/materi"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="353dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/materi"
                android:layout_marginRight="45dp"
                android:layout_marginTop="22.5dp"
                android:layout_marginLeft="311dp"
                android:text="Bab 1"
                android:fontFamily="@font/sora"
                android:textStyle="bold"
                android:textColor="#8897AE"
                android:textSize="14dp"

                />



        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
